styles/portfolio.css
:root {
  --first-color: #f9fbfc;
  --branding-color: #a0dbdb;
  --branding-deep-color: #56a7a7;
  --accent-color: #fcea90;
}

body {
  font-family: "Rubik", sans-serif;
}

h1 {
  font-size: 96px;
  font-weight: 600;
  line-height: 1;
}

ul {
  list-style: none;
  text-align: center;
  font-weight: 300;
}

.about-skills {
  font-size: 56px;
  margin: 50px auto 10px;
}

.anchor-link {
  color: #000;
  text-decoration: none;
  transition: all 150ms ease-in-out;
}

.anchor-link:hover {
  color: #000;
  text-decoration: none;
}

.anchor-link img:hover {
  border-color: var(--branding-deep-color);
}

.btn-branding {
  background-color: var(--branding-deep-color);
  border: 1px solid var(--accent-color);
  border-radius: 6px;
  color: var(--accent-color);
  font-weight: 300;
  margin-left: 20px;
  padding: 10px 35px;
  transition: all 150ms ease-in-out;
}

.btn-branding:hover {
  cursor: pointer;
  color: var(--accent-color);
  font-size: 17px;
  padding: 12px 40px;
  margin-left: 15px;
  margin-top: -2px;
  margin-bottom: -3px;
}

.greetings {
  font-weight: 300;
  font-size: 40px;
}

.hero {
  background-color: var(--branding-color);
}

.hero-title {
  text-align: end;
}

.hero-paragraph {
  font-weight: 300;
  line-height: 1.6;
  word-spacing: 5px;
}

.more-info {
  font-size: 24px;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: 25px;
  padding-left: 20px;
  padding-right: 120px;
}

.paragraph-to-projects {
  font-size: 30px;
  text-align: end;
}

.project-image {
  border: 8px solid rgba(160, 219, 219, 0.7);
}

.project-skills {
  color: var(--branding-deep-color);
}

.shecodes-link {
  color: var(--branding-deep-color);
  text-decoration: none;
  transition: all 150ms ease-in-out;
}

.shecodes-link:hover {
  color: var(--branding-deep-color);
  text-decoration: underline;
  cursor: default;
}

.skills-needed {
  font-weight: 300;
  margin: 5px;
  opacity: 70%;
  text-align: end;
}

.skills-paragraph {
  font-size: 36px;
}

.timeline p {
  font-weight: 300;
}

.timeline .row {
  margin-bottom: 30px;
}

.timeline-badge {
  font-weight: 300;
  text-align: center;
}

.timeline-badge p {
  position: relative;
  top: -15px;
  left: 60px;
}

.timeline-badge:before {
  position: absolute;
  left: 50%;
  margin-left: -6px;
  content: " ";
  display: block;
  width: 12px;
  height: 12px;
  border-radius: 10px;
  border: 6px solid var(--branding-color);
}

.timeline-line:before {
  background-color: var(--accent-color);
  content: " ";
  left: 50%;
  margin-left: -1.5px;
  position: absolute;
  top: 10px;
  bottom: 15px;
  width: 3px;
}

.timeline-wrapper {
  position: relative;
}

@media (max-width: 1199px) {
  h1 {
    font-size: 80px;
  }

  .greetings {
    font-size: 37px;
  }

  .hero-title {
    margin-top: 60px;
  }

  .hero-title.work {
    margin-top: 45px;
  }

  .more-info {
    margin-bottom: 10px;
  }

  .paragraph-to-projects {
    font-size: 26px;
  }

  .skills-paragraph {
    font-size: 19px;
    margin-right: -12px;
    margin-top: 12px;
  }
}

@media (max-width: 991px) {
  h1 {
    font-size: 66px;
    font-weight: 700;
    line-height: 1.4;
  }

  .btn-branding {
    padding: 10px 33px;
    transition: all 150ms ease-in-out;
  }

  .greetings {
    font-size: 32px;
  }

  .hero-title {
    font-size: 60px;
  }

  .hero-title.work {
    margin-top: 26px;
  }

  .hero-paragraph {
    font-size: 15px;
  }

  .hero-paragraph.work {
    margin-top: 30px;
  }

  .more-info {
    font-size: 20px;
    padding-right: 60px;
    margin-bottom: 10px;
  }

  .paragraph-to-projects {
    font-size: 24px;
  }

  .project-content {
    text-align: center;
  }

  .project-content p {
    line-height: 1.7;
    margin: 30px auto;
  }

  .timeline .btn-branding {
    margin-left: 0;
  }

  .timeline .row {
    margin-bottom: 8px;
  }
}

@media (max-width: 767px) {
  h1 {
    font-size: 48px;
  }

  .about-skills {
    font-size: 44px;
  }

  .btn-branding {
    font-size: 13px;
    padding: 8px 28px;
    transition: all 150ms ease-in-out;
  }

  .btn-branding:hover {
    font-size: 14px;
    padding: 10px 30px;
    margin-left: 17px;
    margin-top: -3px;
  }

  .greetings {
    font-size: 26px;
  }

  .hero-title {
    text-align: center;
    margin: 20px auto;
  }

  .hero-paragraph {
    text-align: center;
  }

  .hero-paragraph.work {
    margin-top: 0;
  }

  .more-info {
    font-size: 16px;
    margin-bottom: 8px;
    padding-right: 0;
  }

  .paragraph-to-projects {
    font-size: 18px;
    text-align: center;
  }

  .projects-button {
    display: flex;
    justify-content: center;
  }

  .projects-button .btn-branding {
    margin-left: 0;
  }

  .skills {
    margin: 20px 30px 40px 0;
  }

  .timeline .btn-branding:hover {
    margin-left: 0;
  }
}

@media (max-width: 575px) {
  h2 {
    font-size: 21px;
    line-height: 1;
  }

  .about-me-button {
    display: flex;
    justify-content: center;
    margin-top: 25px;
  }

  .btn-branding {
    margin-left: 0;
  }

  .btn-branding:hover {
    font-size: 14px;
    padding: 9px 32px;
    margin: -1px auto -2px;
  }

  .hero-paragraph {
    margin: 0 40px;
  }

  .more-info {
    padding: 0;
    text-align: center;
  }

  .skills {
    margin: 25px 20px 20px 0;
  }

  .timeline .btn-branding:hover {
    margin: -1px 0 -2px;
  }
}

@media (max-width: 344px) {
  ul {
    font-size: 12px;
  }

  .hero-title {
    font-size: 48px;
  }

  .hero-paragraph {
    margin: 0 20px;
  }

  .skills-needed {
    font-size: 12px;
  }
}

